--- a/index.html
+++ b/index.html
@@ -176,12 +176,13 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">GitHub</h5>
                             <p class="card-text mb-0 parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, hic vero. Odio saepe quas natus eligendi, minus inventore.</p>
-                            <button type="button" class="btn btn-outline-info">
+                            <!-- Enlace estilizado como botón para el repositorio -->
+                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
-                            </button>
-                            <button type="button" class="btn btn-outline-info">
+                            </a>
+                            <!-- Enlace estilizado como botón para la publicación -->
+                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button">
                                 Ir a publicación
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -196,7 +197,7 @@
 
             <!-- ÍCONOS -->
             <!-- github -->
-            <a href="https://github.com/Maite-AM/Viajes_Chile.git" target="_blank"><i class="fa-brands fa-github-square fa-3x ml-3 text-white mb-5" data-toggle="tooltip" data-original-title="Ir a GitHub"> </i></a>
+            <a href="https://github.com/Maite-AM" target="_blank"><i class="fa-brands fa-github-square fa-3x ml-3 text-white mb-5" data-toggle="tooltip" data-original-title="Ir a GitHub"> </i></a>
 
             <!-- linkedin -->
             <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-3x ml-3 text-white" data-toggle="tooltip" data-original-title="Ir a LinkedIn"> </i></a>
