--- a/index.html
+++ b/index.html
@@ -176,13 +176,11 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">GitHub</h5>
                             <p class="card-text mb-0 parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, hic vero. Odio saepe quas natus eligendi, minus inventore.</p>
-                            <!-- Enlace estilizado como botón para el repositorio -->
                             <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
                             </a>
-                            <!-- Enlace estilizado como botón para la publicación -->
-                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button">
-                                Ir a publicación
+                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                                Ir a página
                         </div>
                     </div>
                 </div>
