--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
     <!-- MAIN -->
 
     <!-- Header -->
-    <div class="container mt-5">
-        <header class="text-center">
+    <div class="container mt-2 header_color">
+        <header class="text-center style=margin-top: 50px;">
           <h1>Maite Astete Mora</h1>
           <img src="assets/img/perfil.jpeg" alt="imagen_cv_personal" width="300" />
         </header>
     </div>
     
     <!-- Sección "Acerca de mi" -->
-    <section id="acerca" class="container text-center text-black my-5 mt-1">
-        <div>
-            <h2 class="text-center fw-bold pt-5">Acerca de mi</h2>
+    <section id="acerca" class="container text-center text-black my-5 mt-0">
+        <div class="contenedores">
+            <h2 class="text-center fw-bold pt-5 titulo-acerca">Acerca de mí</h2>
             <p>
                 Profesional con más de 6 años de experiencia internacional en el rubro de la consultoría. Me destaco por ser
                 proactiva, analítica, metódica y con capacidad para generar propuestas y soluciones innovadoras a los
@@ -81,7 +81,7 @@
     <!-- Sección "Educación" -->
     <section id="educacion" class="container text-center text-black my-5 mt-1">
         <div>
-            <h2 class="text-center fw-bold pt-5">Educación</h2>
+            <h2 class="text-center fw-bold pt-5 titulo-educacion">Educación</h2>
             <p id="icono_prueba"><i class="fa-solid fa-graduation-cap fa-2x mt-2 mb-2"></i></p>
             <p class="my-3 font-weight-light">Estudié Ingeniería Comercial en la Universidad Adolfo Ibáñez, entre los años 2009 y 2013. Además, realicé el magíster de Finanzas en dicha casa de estudios.
                 Con el fin de aprender nuevas cosas, el año 2020 realicé un bootcamp de Data Science en Desafío Latam y actualmente, me encuentro cursando el bootcamp de FullStack en la misma academia. </p>
@@ -91,7 +91,7 @@
     <!-- Sección "Experiencia" -->
     <section id="experiencia" class="container text-center text-black my-5 mt-1">
         <div>
-            <h2 class="text-center fw-bold pt-5">Experiencia</h2>
+            <h2 class="text-center fw-bold pt-5 titulo-experiencia">Experiencia</h2>
             <p id="icono_prueba"><i class="fa-solid fa-briefcase fa-2x mt-2 mb-2"></i></p>
                 <p class="my-3 font-weight-light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, explicabo hic ex vitae eveniet voluptatem laborum perferendis dolores non quis ipsum asperiores fugit dolorem eaque incidunt nostrum adipisci corporis porro!</p>
         </div>
@@ -100,7 +100,7 @@
     <!-- Sección "Cursos y otros" -->
     <section id="cursos" class="container text-center text-black my-5 mt-1">
         <div>
-            <h2 class="text-center fw-bold pt-5">Cursos y otras actividades</h2>
+            <h2 class="text-center fw-bold pt-5 titulo-cursos">Cursos y otras actividades</h2>
             <p id="icono_prueba"><i class="fa-solid fa-laptop-file fa-2x mt-2 mb-2"></i></p>
             <ul>
                 <li>Fundamentos de Data Science, Desafío Latam</li>
@@ -113,7 +113,7 @@
     <!-- Sección "Portafolio" -->
     <section id="portafolio" class="container-fluid text-black my-5 mt-1">
         <div>
-            <h2 class="text-center fw-bold pt-5"> Mi Portafolio </h2>
+            <h2 class="text-center fw-bold pt-5 titulo-portafolio"> Portafolio </h2>
         </div>
 
         <div class="content-card ml-5 mr-5">
@@ -181,6 +181,7 @@
                             </a>
                             <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a página
+                            </a>
                         </div>
                     </div>
                 </div>
