--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
             <p>
                 Profesional con más de 6 años de experiencia internacional en el rubro de la consultoría. Me destaco por ser
                 proactiva, analítica, metódica y con capacidad para generar propuestas y soluciones innovadoras a los
-                desafíos que surgen en el día a día, por medio de la reflexión y aprendizaje continuo. Actualmente, me
-                encuentro en la búsqueda de oportunidades en el ámbito del análisis de datos.
+                desafíos que surgen en el día a día, por medio de la reflexión y aprendizaje continuo.
             </p>
         </div>
     </section>
@@ -93,7 +92,7 @@
         <div>
             <h2 class="text-center fw-bold pt-5 titulo-experiencia">Experiencia</h2>
             <p id="icono_prueba"><i class="fa-solid fa-briefcase fa-2x mt-2 mb-2"></i></p>
-                <p class="my-3 font-weight-light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, explicabo hic ex vitae eveniet voluptatem laborum perferendis dolores non quis ipsum asperiores fugit dolorem eaque incidunt nostrum adipisci corporis porro!</p>
+                <p class="my-3 font-weight-light">Cuento con más de 6 años de experiencia internacional en consultoría en Gobierno Corporativo y Familiar, Rediseño organizacional, Sistemas de Compensaciones, Control de Gestión y Planificación Estratégica, en diferentes industrias. </p>
         </div>
     </section>
 
@@ -124,13 +123,13 @@
                         <img src="assets/img/landing.jpg" alt="imagen_1">
                         <div class="card_body p-4">
                             <h5 class="card_title">Landing Page</h5>
-                            <p class="card-text mb-0 parrafo2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod in autem obcaecati exercitationem quidem fuga asperiores qui ipsa ad sequi.</p>
-                            <button type="button" class="btn btn-outline-info">
+                            <p class="card-text mb-3 parrafo2">Aplicación de conocimientos de HTML y CSS</p>
+                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
-                            </button>
-                            <button type="button" class="btn btn-outline-info">
-                                Ir a publicación
-                            </button>
+                            </a>
+                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                                Ir a página
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -141,13 +140,13 @@
                         <img src="assets/img/iguana.jpg" alt="imagen_2">
                         <div class="card_body p-4">
                             <h5 class="card_title">Iguana Page</h5>
-                            <p class="card-text mb-0 parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint obcaecati aut ad autem minus, quis numquam ducimus dolores doloremque.</p>
-                            <button type="button" class="btn btn-outline-info">
+                            <p class="card-text mb-3 parrafo2">Aplicación de conocimientos de posicionamiento en CSS mediante Flex</p>
+                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
-                            </button>
-                            <button type="button" class="btn btn-outline-info">
-                                Ir a publicación
-                            </button>
+                            </a>
+                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                                Ir a página
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -158,13 +157,13 @@
                         <img src="assets/img/cuppon.jpg" alt="imagen_3">
                         <div class="card_body p-4">
                             <h5 class="card_title">Cuppon</h5>
-                            <p class="card-text mb-0 parrafo2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum error eos obcaecati quam quaerat culpa amet illum eligendi, minus inventore.</p>
-                            <button type="button" class="btn btn-outline-info">
+                            <p class="card-text mb-3 parrafo2">Aplicación de conocimientos Bootstrap</p>
+                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
-                            </button>
-                            <button type="button" class="btn btn-outline-info">
-                                Ir a publicación
-                            </button>
+                            </a>
+                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                                Ir a página
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -175,7 +174,7 @@
                         <img src="assets/img/comidas.jpg" alt="imagen_4">
                         <div class="card_body p-4">
                             <h5 class="card_title">GitHub</h5>
-                            <p class="card-text mb-0 parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, hic vero. Odio saepe quas natus eligendi, minus inventore.</p>
+                            <p class="card-text mb-3 parrafo2">Aplicación de conocimientos sobre Git, Github, HTML y CSS</p>
                             <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
                             </a>
