--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#acerca">Acerca de mi</a>
+                <a class="nav-link" href="#acerca">Acerca de mí</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#educacion">Educación</a>
@@ -175,10 +175,10 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">GitHub</h5>
                             <p class="card-text mb-3 parrafo2">Aplicación de conocimientos sobre Git, Github, HTML y CSS</p>
-                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
+                            <a href="https://github.com/Maite-AM/fdsw-github" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
                             </a>
-                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                            <a href="https://maite-am.github.io/fdsw-github/" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a página
                             </a>
                         </div>
