--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">Landing Page</h5>
                             <p class="card-text mb-3 parrafo2">Aplicación de conocimientos de HTML y CSS</p>
-                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
+                            <a href="https://github.com/Maite-AM/LandingPage.github.io" class="btn btn-outline-info" role="button">
                                 Ir a repositorio
                             </a>
-                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                            <a href="https://maite-am.github.io/LandingPage.github.io/" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a página
                             </a>
                         </div>
