--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">Landing Page</h5>
                             <p class="card-text mb-3 parrafo2">Aplicación de conocimientos de HTML y CSS</p>
-                            <a href="https://github.com/Maite-AM/LandingPage.github.io" class="btn btn-outline-info" role="button">
+                            <a href="https://github.com/Maite-AM/LandingPage.github.io" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a repositorio
                             </a>
                             <a href="https://maite-am.github.io/LandingPage.github.io/" class="btn btn-outline-info" role="button" target="_blank">
@@ -141,10 +141,10 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">Iguana Page</h5>
                             <p class="card-text mb-3 parrafo2">Aplicación de conocimientos de posicionamiento en CSS mediante Flex</p>
-                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
+                            <a href="https://github.com/Maite-AM/Iguanas.github.io" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a repositorio
                             </a>
-                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                            <a href="https://maite-am.github.io/Iguanas.github.io/" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a página
                             </a>
                         </div>
@@ -158,10 +158,10 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">Cuppon</h5>
                             <p class="card-text mb-3 parrafo2">Aplicación de conocimientos Bootstrap</p>
-                            <a href="URL_DEL_REPOSITORIO" class="btn btn-outline-info" role="button">
+                            <a href="https://github.com/Maite-AM/Cuppon.github.io" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a repositorio
                             </a>
-                            <a href="URL_DE_LA_PUBLICACION" class="btn btn-outline-info" role="button" target="_blank">
+                            <a href="https://maite-am.github.io/Cuppon.github.io/" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a página
                             </a>
                         </div>
@@ -175,7 +175,7 @@
                         <div class="card_body p-4">
                             <h5 class="card_title">GitHub</h5>
                             <p class="card-text mb-3 parrafo2">Aplicación de conocimientos sobre Git, Github, HTML y CSS</p>
-                            <a href="https://github.com/Maite-AM/fdsw-github" class="btn btn-outline-info" role="button">
+                            <a href="https://github.com/Maite-AM/fdsw-github" class="btn btn-outline-info" role="button" target="_blank">
                                 Ir a repositorio
                             </a>
                             <a href="https://maite-am.github.io/fdsw-github/" class="btn btn-outline-info" role="button" target="_blank">
