--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>
                 Profesional con más de 6 años de experiencia internacional en el rubro de la consultoría. Me destaco por ser
                 proactiva, analítica, metódica y con capacidad para generar propuestas y soluciones innovadoras a los
-                desafíos que surgen en el día a día, por medio de la reflexión y aprendizaje continuo.
+                desafíos que surgen en el día a día, por medio de la reflexión y aprendizaje continuo. Con capacidad de trabajar bajo presión.
             </p>
         </div>
     </section>
